--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <div id="welcome" style="display:none;">
             <div class="card" style="text-align:center;">
                 <div style="margin-bottom: 2rem;">
-                    <img src="squidward_logo.jpg" alt="MayoGo Logo" style="width:120px; border-radius:16px;" />
+                    <img src="mayo.jpg" alt="MayoGo Logo" style="width:120px; border-radius:16px;" />
                 </div>
                 <div style="margin-bottom: 2rem;"></div>
                 <div style="font-size:1.1rem; margin-bottom:2.5rem; font-style:italic; color:#555;">Created while procrastinating something else.</div>
